4-Jenkins-Setup/jenkins-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
