4-Jenkins-Setup/dependency-track-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dependency-track
  namespace: dependency-track
spec:
  parentRefs:
    - name: shared-gateway
      namespace: envoy-gateway
  hostnames:
    - dependency-track.192.168.0.110.nip.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: dtrack-dependency-track-api-server
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dtrack-dependency-track-frontend
          port: 8080
